z-index issue started

--- a/form.css
+++ b/form.css
@@ -4,8 +4,9 @@
     flex-direction: row;
     height: 100%;
     width: 100%;
-    /* top: 10%; */
-    /* left: 10%; */
+    top: 10%;
+    position: absolute;
+    z-index: -2;
 }
 
 .form-fields {
@@ -14,6 +15,7 @@
     width: 71%;
     position: relative;
     padding-top: 5%;
+    z-index: -100;
 }
 
 .form-field {
@@ -21,6 +23,7 @@
     margin-bottom: 38px;
     position: relative;
     cursor: pointer;
+    z-index: -1;
 }
 
 .form-action-panel {
@@ -94,6 +97,7 @@
     position: relative;
     height: 100%;
     display: none;
+    z-index: 2;
 }
 
 .calendar {
@@ -161,6 +165,7 @@
     position: absolute;
     bottom: 10%;
     order: 2;
+    z-index: 100;
 }
 
 .calendar-week {
@@ -260,4 +265,14 @@
     padding-left: 2%;
 }
 
-.month-disp{position: absolute;width: 100%;transition-property:  left;transition-duration:  .3s;}
+.month-disp {
+    position: absolute;
+    width: 100%;
+    transition-property: left;
+    transition-duration: .3s;
+}
+
+.calendar-trigger{
+    box-shadow: inset 1px 1px;
+    top: 10%;
+    width: 90%;
